<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login.view.LoginActivity">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center"
        android:text="@string/login"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_bold"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="60dp"
        tools:text="@string/login" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_with_fb"
        android:layout_width="238dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="147dp"
        android:background="@drawable/fb_with_radius"
        android:visibility="invisible" />

    <Button
        android:id="@+id/custom_fb"
        android:layout_width="248dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@drawable/fb_with_radius"
        android:drawableLeft="@drawable/com_facebook_button_icon"
        android:onClick="onClick"
        android:paddingLeft="25dp"
        android:paddingRight="43dp"
        android:text="@string/login_with_fb_title"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="13dp">


    </Button>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="219dp"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        app:fontFamily="@font/roboto"
        tools:text="@string/info" />

    <EditText
        android:id="@+id/email"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="184dp"

        android:background="@drawable/edittext_with_radius"
        android:drawableLeft="@drawable/account"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_with_radius"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/fogret_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_title"
        android:layout_below="@+id/password"
        android:layout_marginTop="-136dp"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textSize="11dp"
        app:fontFamily="@font/roboto_medium" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/button_with_radius"
        android:text="@string/login_btn"
        android:textAllCaps="false"

        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/lineorline"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp">

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or"

            android:textSize="10dp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/line" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"

            app:srcCompat="@drawable/line" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-65dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="31dp"


            android:layout_alignParentBottom="true"

            android:layout_marginBottom="24dp"

            android:gravity="center"
            android:text="@string/register_text" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/register_text"
            android:layout_alignTop="@+id/register_text"
            android:text="@string/register_link"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>
